labs/lab1/testsuite/good/good016-fun-call-condition-and-while-do-while.cc
int main() {
	if (banana2() == banana2()) while (!34) do x++; while (main());
}
