labs/lab1/testsuite/bad/bad127.cc
int main () {
	do {int x = 1; } return 0
}
